--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     compile("com.h2database:h2")
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
 //    compile("org.springframework.boot:spring-boot-starter-security")
+    compile 'com.google.guava:guava:27.1-jre'
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
