--- a/build.gradle
+++ b/build.gradle
@@ -29,17 +29,19 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
-    compile("org.springframework.boot:spring-boot-starter-web")
-    compile("org.hibernate:hibernate-core")
-    compile("org.hibernate:hibernate-entitymanager")
-    compile("javax.xml.bind:jaxb-api:2.3.0")
-    compile("org.javassist:javassist")
-    compile("com.h2database:h2")
-    compile("org.springframework.boot:spring-boot-starter-data-jpa")
-    compile("org.springframework.boot:spring-boot-starter-security")
+    compile 'org.springframework.boot:spring-boot-starter-web'
+    compile 'org.hibernate:hibernate-core'
+    compile 'org.hibernate:hibernate-entitymanager'
+    compile 'javax.xml.bind:jaxb-api:2.3.0'
+    compile 'org.javassist:javassist'
+    compile 'com.h2database:h2'
+    compile 'org.springframework.boot:spring-boot-starter-data-jpa'
+    compile 'org.springframework.boot:spring-boot-starter-security'
     compile 'com.google.guava:guava:27.1-jre'
+    compile 'io.springfox:springfox-swagger2:2.9.2'
+    compile 'io.springfox:springfox-swagger-ui:2.9.2'
 
-    testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile 'org.springframework.boot:spring-boot-starter-test'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 }
 compileKotlin {
